# train-conductor-world-tools

./: .pylintrc  README.md  pyproject.toml
data/: distances.json  rotterdam.tmx  start-case.tmx  test.tmx  tiles.json  train-conductor-world.tmx
train_conductor_world_helper/: data.py  helper.py  main.py  stats.py  updater.py  validations.py
train_conductor_world_helper/annotations/: annotator.py  area_annotators.py  base_annotators.py  connection_annotators.py
train_conductor_world_helper/graphing/: edge.py  graph.py  node.py
train_conductor_world_helper/graphing/pathing/: path_component.py  paths.py
train_conductor_world_helper/mapping/: coordinate.py  tile.py  tile_map.py  world.py
train_conductor_world_helper/solver/: solver.py
train_conductor_world_helper/tmx/: layers.py  main.py  tiled_map.py
